# Flutter_MobileApp_Filter_PYCUDA

./: README.md  init.sql
back_FastAPI/: Dockerfile  docker-compose.yml  pyproject.toml
back_FastAPI/app/: filtro_circular.py  filtro_fuxia.py  filtro_logo_ups.py  gauss.py  main.py  mediana.py  sobel.py  utils.py
back_FastAPI/app/analitics/: auth.py  crud.py  databases.py  schemas.py  user.py
flutter_cuda/: README.md  pubspec.yaml
flutter_cuda/android/app/: build.gradle
flutter_cuda/android/app/src/main/: AndroidManifest.xml
flutter_cuda/android/app/src/main/kotlin/com/example/flutter_cuda/: MainActivity.kt
flutter_cuda/ios/Runner/: Info.plist
flutter_cuda/ios/Runner.xcodeproj/: project.pbxproj
flutter_cuda/lib/: Posts.dart  appConfig.dart  camera_screen.dart  image_preview_screen.dart  login.dart  main.dart  register.dart
flutter_cuda/linux/: CMakeLists.txt  my_application.cc
flutter_cuda/macos/Runner.xcodeproj/: project.pbxproj
flutter_cuda/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
flutter_cuda/macos/Runner/Configs/: AppInfo.xcconfig
flutter_cuda/test/: widget_test.dart
flutter_cuda/web/: index.html  manifest.json
flutter_cuda/windows/: CMakeLists.txt
flutter_cuda/windows/runner/: Runner.rc  main.cpp
