[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Cosmic <andresbloc@hotmail.es>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.29.0"
fastapi = "^0.111.0"
opencv-python = "^4.9.0.80"
pycuda = "2023.1"
sqlalchemy = "1.3.19"
psycopg2 = "^2.9.9"
numpy = "^1.26.4"
pyglet = "^2.0.15"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
